--- a/mockup/demo new.html
+++ b/mockup/demo new.html
@@ -140,7 +140,7 @@
 				} else if (stage == 1) {
 					addCountryStats("United Kingdom", 640130, "United States of America", 3077);
 					addBarPair(d3.select("#display-center"), "GDP per capita ($)", 19095, 23954, 28000);
-					addBarPair(d3.select("#display-center"), "Human Development Index", 0.775, 0.86, 1);
+					addBarPair(d3.select("#display-center"), "HDI", 0.775, 0.86, 1);
 					addBarPair(d3.select("#display-center"), "Life Expectancy", 75.88, 75.21, 85);
 					addBarPair(d3.select("#display-center"), "World Risk Index", 3.54, 3.76, 4);
 					addBarPair(d3.select("#display-center"), "Air Pollution Index", 56, 67, 350);
