--- a/mockup/demo new.html
+++ b/mockup/demo new.html
@@ -112,6 +112,9 @@
 				<div class="col-xs-12 text-center" id = "display-center">
 				</div>
 			</div>
+			<div class="row">
+				<div style="height:300px"></div>
+			</div>
 		</div>
 
 		<script>	
